2004-01-12  Shiro Kawai  <shiro@acm.org>

	* Makefile.in, cgi/Makefile.in, examples/Makefile.in,
	  src/Makefile.in : added 'uninstall' and 'uninstall-examples'
	  make target.

	* src/kahua-install.in : added -U (uninstall) option.

	* src/kahua-spvr.in : added (use srfi-1) to adapt the change of
	  util.list in post-0.7.3 Gauche.

2004-01-05  Shiro Kawai  <shiro@acm.org>

	* test/admin.scm : set up enviornment variables correctly so that
	  test can run without Kahua being installed.

2004-01-05 Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* test/admin.scm : add keyword ":wait" as #t to each run-process.

2004-01-05  Shiro Kawai  <shiro@acm.org>

	* src/kahua/config.scm (<kahua-config>):
	  typo fix :init-base -> :init-value

2004-01-04  Shiro Kawai  <shiro@acm.org>

	* src/Makefile.in (INSTALL_DIRS): added directory to install
	  kahua.* modules.

2004-01-02 Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* test/admin.scm : change to use cvs import, checkout.

2004-01-02 Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua-admin.in : support cvs update. "cvs update [type]"

	* src/kahua/config.scm : add "repository" slot.

        * test/kahua-server.in (reload-server) : reload specifyed file.

	* test/admin.scm : add kahua-admin test program.

2003-12-29  Shiro Kawai  <shiro@acm.org>

	* src/kahua/test/xml.scm : The last fix about *test-error* is wrong.
	  If the test procedure gets *test-error* as input, it should return
	  #f---it never matches any pattern anyway.

2003-12-28  Shiro Kawai  <shiro@acm.org>

	* cgi/kahua.cgi.in (send-reply) : pass PATH_INFO information (after
	  removing ~user) to the server via "x-kahua-path-info" header
	  field.

2003-12-27  Shiro Kawai  <shiro@acm.org>

	* src/kahua/gsid.scm (make-worker-id), 
	  src/kahua/session.scm (make-cont-key): changed to use base-36
	  numbers instead of base-10, to shorten the key.

	* src/kahua/test/worker.scm : refactored out common procedures for
	  testing worker scripts.
